# makers

./: .env.example  environments.toml  index.html  package-lock.json  package.json  tailwind.config.js
contracts/group_payment/: Cargo.toml
contracts/group_payment/src/: lib.rs  test.rs
contracts/group_payment/test_snapshots/test/: test_deposit.1.json  test_deposit_after_deadline.1.json  test_double_deposit.1.json  test_initialize.1.json  test_release.1.json  test_return_funds.1.json
contracts/hello_world/src/: lib.rs  test.rs
contracts/hello_world/test_snapshots/test/: test_deposit.1.json  test_deposit_after_deadline.1.json  test_double_deposit.1.json  test_initialize.1.json  test_release.1.json  test_return_funds.1.json
src/: App.tsx  index.css  vite-env.d.ts
src/api/: mockData.ts  users.ts
src/components/: ConnectAccount.tsx  CreateGroup.tsx  ExpenseCard.tsx  FriendCard.tsx  GroupCard.tsx  HelpButton.tsx  Navbar.tsx  NetworkPill.tsx  PayButton.tsx  ShareGroup.tsx  UserRegistrationForm.tsx  WalletButton.tsx  WithdrawButton.tsx
src/debug/validate/: index.ts
src/hooks/: useCreateGroup.tsx  useExpenses.ts  useGroup.ts  useUserRegistration.ts  useUsers.ts
src/mock/: mockExpenses.ts  mockGroups.ts  mockUsers.ts
src/pages/: CreateExpense.tsx  ExpenseDetail.tsx  GroupDetail.tsx  Groups.tsx  Home.tsx  Profile.tsx
